--- a/basic_polybar/template.liquid
+++ b/basic_polybar/template.liquid
@@ -1,7 +1,7 @@
 {% for tag in workspace.tags %}
 {% if tag.mine %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{F#000000}%{B#FFB52A}  {{tag.name}}  %{B-}%{F-}
+%{F#000000}%{B#00FF00}  {{tag.name}}  %{B-}%{F-}
 %{A}
 {% elsif tag.urgent %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
